--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         echo "[default]
         aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" > ~/.aws/credentials
+        aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
