--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,16 @@ jobs:
       with:
         terraform_version: 1.0.0
 
-    - name: Terraform Destroy
-      run: |
-        terraform destroy -auto-approve
-
     - name: Terraform Init
       run: |
         terraform init
+    - name: Terraform Plan
+      run: |
+        terraform plan 
 
     - name: Terraform Apply
       run: |
         terraform apply -auto-approve
+    - name: Terraform Destroy
+      run: |
+        terraform destroy -auto-approve
