--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS
+name: Terraform Plan
 
 on:
   push:
@@ -6,34 +6,28 @@ on:
       - main
 
 jobs:
-  deploy:
+  terraform:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Configure AWS credentials
-      run: |
-        echo "[default]"
-        aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Set up AWS credentials
+        run: |
+          
+          echo "[default]
+          aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" 
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 1.0.0
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.0.0
 
-    - name: Terraform Init
-      run: |
-        terraform init
-    - name: Terraform Plan
-      run: |
-        terraform plan 
-
-    - name: Terraform Apply
-      run: |
-        terraform apply -auto-approve
-    - name: Terraform Destroy
-      run: |
-        terraform destroy -auto-approve
+      - name: Terraform init and plan
+        run: |
+          
+          terraform init
+          terraform plan
+          terraform apply
+          
